--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 	   <div class="row">
 	   		<div class='col-md-3'>	    	
 				<form class='col-md-3' action="/action_page.php">
-					<input type="DataTime" id="dateTime" placeholder ="DateTime">
+					<input type="DataTime" id="datetime" placeholder ="DateTime">
 					<input type="text" id="city" placeholder ="City">
 					<input type="text" id="state" placeholder ="State">
-					<input type="text" id="county" placeholder ="County">
+					<input type="text" id="country" placeholder ="County">
 					<input type="text" id="shape" placeholder ="Shape">
-
-						<a id="searchBtn" class="btn btn-default">Search</a>
-						<a id="resetBtn" class="btn btn-default">Reset</a>
+					<a id="search" class="btn btn-default">Search</a>
+					<a id="clear" class="btn btn-default">Reset</a>
 				</form>
 			</div>
 		
@@ -63,6 +62,9 @@
 				  <tbody>
 				  </tbody>
 				</table>
+				<div class="col-md-12 text-center">
+           			<ul class="pagination pagination-lg pager" id="myPager"></ul>
+       			</div>
 			</div>
 		</div>
 	<!--</div>-->
