--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
 
   <!-- CSS Stylesheet -->
-  	<link rel="stylesheet" href="./Styles/stylesheet.css">
+  	<link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
         </div>
     </div>
-	<!--<div class="container">-->
+	<div class="container">
 	   <div class="row">
 	   		<div class='col-md-3'>	    	
 				<form class='col-md-3' action="/action_page.php">
@@ -59,7 +59,7 @@
 				          <th>Comments</th>
 				        </tr>
 					</thead>
-				  <tbody>
+				  <tbody class = 'tbody'>
 				  </tbody>
 				</table>
 				<div class="col-md-12 text-center">
@@ -67,18 +67,24 @@
        			</div>
 			</div>
 		</div>
-	<!--</div>-->
+	</div>
  
   <!--Javascript Links-->
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="data.js" type="text/javascript"></script>
 
   <script src="app.js" type="text/javascript"></script>
+  
+  
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
+<!--
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
